add_subdirectory(bellows)
add_subdirectory(buttons)
add_subdirectory(charts)
add_subdirectory(demo)
add_subdirectory(dialogs)
add_subdirectory(dnd)
add_subdirectory(icons)
add_subdirectory(layouts)
add_subdirectory(lists)
add_subdirectory(mdi)
add_subdirectory(offscreen)
add_subdirectory(popups)
add_subdirectory(simple)
add_subdirectory(sliders)
add_subdirectory(splitters)
add_subdirectory(stack)
add_subdirectory(tabs)
add_subdirectory(textedit)
add_subdirectory(windows)
